[package]
name = "arduino_test"
version = "0.1.0"
authors = ["AlessioZeni <alessio@famigliazeni.it>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino_test"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.5.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-uno"]

[workspace]