[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = { workspace = true, optional = true}
embedded-hal = {workspace=true, optional=true}#optional =true

[features]
default=["arduino",]
std = ["dep:serialport"]
arduino=["dep:embedded-hal"]
debug=[]